# chat-app-with-rust

./: Cargo.toml  README.md
src/: main.rs
static/: index.html  main.js  styles.css
