[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
tokio = { version =  "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-tungstenite = "0.20.0"
warp = "0.3.5"

